@@ -3,11 +3,15 @@
 suffix=$(date +%s)
 [[ -z $curdir ]] && curdir=$(dirname $(readlink -f $0))
 
-[[ -e "$HOME/.bash" || -L "$HOME/.bash" ]] && mv "$HOME/.bash" "$HOME/.bash.${suffix}.bak"
-[[ -f "$HOME/.bashrc" || -L "$HOME/.bashrc" ]] && mv "$HOME/.bashrc" "$HOME/.bashrc.${suffix}.bak"
+if [[ ! -d $HOME/.bash ]]; then
+  mkdir -p $HOME/.bash
+fi
+if [[ -f "$HOME/.bashrc" || -L "$HOME/.bashrc" ]]; then
+  mv "$HOME/.bashrc" "$HOME/.bashrc.${suffix}.bak"
+fi
 
 echo -ne "配置bash...\t"
 ln -sf "$curdir/.bashrc" "$HOME/.bashrc"
-ln -sf "$curdir/.bash" "$HOME/.bash"
+ln -sf "$curdir/.bash/interface.sh" "$HOME/.bash/interface.sh"
 echo '完成'
 
