@@ -1,0 +1,7 @@
+#!/usr/bin/env bash
+
+# bash git prompt
+if [[ ! -d $HOME/.bash/bash-git-prompt ]]; then
+  git clone https://github.com/magicmonty/bash-git-prompt $HOME/.bash/bash-git-prompt
+fi
+
