@@ -1,6 +1,0 @@
-为你的fish 安装oh-my-fish。
-
-fish 是一个注重交互性的shell，较少的配置就可以有较好的交互性体验，简易、稳定而不够强大，适用于root 用户使用。
-
-从目前的使用体验上来说，请避免使用fish，而使用bash 替代它。
-
