@@ -1,9 +1,0 @@
-# Path to Oh My Fish install.
-set -gx OMF_PATH $HOME/.local/share/omf
-
-# Customize Oh My Fish configuration path.
-#set -gx OMF_CONFIG /home/is/.config/omf
-
-# Load oh-my-fish configuration.
-source $OMF_PATH/init.fish
-
