@@ -1,7 +1,0 @@
-#!/usr/bin/env bash
-
-# oh-my-fish
-if [[ ! -d $HOME/.local/share/omf ]];then
-  git clone https://github.com/oh-my-fish/oh-my-fish $HOME/.local/share/omf
-fi
-
